--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <link rel="stylesheet" href="styles.css"></link>
 </head>
 <body ng-controller="MainController">
-    
+
     {{thisAppIsBroken}}
-    
-     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
-     <script src="app.js"></script>
-     <script src="controller.js"></script>
+
+
+<div ng-repeat = 'user in users' ng-class="{favorite: user.isFavorite}">
+  <span>{{user.first_name}}
+  {{user.last_name}}</span>
+  <img ng-src="{{user.avatar}}"/>
+  <button ng-click="toggleFavorites(user.id)">Toggle
+  </button>
+</div>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
+<script src="app.js"></script>
+<script src="controller.js"></script>
+<script src="mainService.js"></script>
 </body>
+
 </html>
